--- a/src/screen/home/aboutus/AboutUsSection.module.css
+++ b/src/screen/home/aboutus/AboutUsSection.module.css
@@ -242,7 +242,7 @@
     gap: 30px;
   }
   .top_content_layout_btn {
-    background-color: #002d62;
+    background-color: #1c4670;
     width: 35%;
     font-size: 12px;
     padding: 2% 0%;
