--- a/src/screen/home/trustedCompany/CompanyTrusted.module.css
+++ b/src/screen/home/trustedCompany/CompanyTrusted.module.css
@@ -41,8 +41,8 @@
     align-items: center;
   }
   .company_container_text {
-    text-align: center;
-    width: 90%;
+    text-align: left;
+    width: 85%;
     font-size: 16px;
     color: #272d37;
     line-height: 26.63px;
